{
    "name": "MakerFairAction",
    "maps": [
        {
            "name": "MakerFair",
            "id": "e8496913-037f-45fc-9ec4-3259d0168f6c",
            "actions": [
                {
                    "name": "SetDroneTello",
                    "type": "Button",
                    "id": "97c7ec32-0efa-43e2-99f1-a7fac680f35f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetDroneFPV",
                    "type": "Button",
                    "id": "9106ea73-e92f-4fce-ba0e-57d978e5710d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchGameMode",
                    "type": "Button",
                    "id": "af095327-48ac-430b-8387-f48fc34bc833",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchDroneType",
                    "type": "Button",
                    "id": "56218560-b3aa-4db6-b625-c441032fed9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d68078d-2503-4247-baaf-c40be0b2c9d9",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerOpenXR>{RightHand}/primarybutton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDroneTello",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "555d44da-fe79-44c3-b7f9-b736191263d6",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDroneTello",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ff60411-184e-4ffb-a718-0b24f64b4ad2",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerOpenXR>{RightHand}/secondarybutton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDroneFPV",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78696e00-6ee0-497c-9785-49abc473b678",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDroneFPV",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3509abd0-1e98-4392-bb8e-18662069d2dc",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerOpenXR>{LeftHand}/primarybutton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchGameMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7da1890-99e5-4a38-906d-9b0e878c128d",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchGameMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb3a9e06-e822-4275-9093-05d302e47b04",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerOpenXR>{LeftHand}/secondarybutton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDroneType",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35c07956-c8b0-436f-bcc5-9c8c8b499f34",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDroneType",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}